--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -2,7 +2,7 @@
 <form action="primer" method="post">
     {% csrf_token %}
     {{ form }}
-    <input type="submit" value="Ansgggwer" />
+    <input type="submit" value="Answer" />
 </form>
 
 
