--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -7,7 +7,7 @@
  <body>
   <div id="big">
    <div id="zagolovok">
-    <p><h2 align="center" >Немного обо мне:</h2></p>
+    <p><h2 align="center" >Главная страница</h2></p>
     <div id="text_sleva">
 	<p><font >Здесь будет текст стартовой страницы, но пока его нет</font></p>
 	<p><font >Нажав на кнопку ниже, вы попадете на страницу входа в систему</font></p>
@@ -18,7 +18,7 @@
    </div>
 
 	<div id="buttons">
-		<a href="http://localhost:8000/login/" align="center"><button><h3>Нажми меня</button></h3></form>
+		<a href="http://localhost:8000/login/" align="center"><button><h3>Авторизация</button></h3></form>
 	</div>
    </div>
  </body>
