--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -25,6 +25,6 @@
 	<p><font >Естественно потом она(кнопка) переедет, но не сегодня</font></p>
 	<p><font >Кстати, если вы еще не зарегистрированы, Вам любезно предложат это сделать</font></p>
 	<p><font >Еще у нас можно порешать случайно сгенерированные примерчики</font></p>
-    <p>{{user.id}}</p>
+    <p>user.id : {{user.id}}</p>
     <p>{{text}}</p>
  </body>
