minor bud fixes and minor updates

--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -27,4 +27,5 @@
 	<p><font >Еще у нас можно порешать случайно сгенерированные примерчики</font></p>
     <p>user.id : {{user.id}}</p>
     <p>{{text}}</p>
+    <p>{{answer}}</p>
  </body>
