minor bug fixes and updates

--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -27,7 +27,8 @@
 	<p><font >Еще у нас можно порешать случайно сгенерированные примерчики</font></p>
 
     <p>user.id : {{user.id}}</p>
+
     <p>Задача: {{name}}</p>
     <p>{{text}}</p>
-    <p>{{answer}}</p>
+    <p>{Ответ: {answer}}</p>
  </body>
