--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -27,8 +27,9 @@
 	<p><font >Еще у нас можно порешать случайно сгенерированные примерчики</font></p>
 
     <p>user.id : {{user.id}}</p>
-
+    <table border="5"> <td>
     <p>Задача: {{name}}</p>
     <p>{{text}}</p>
     <p>Ответ: {{answer}}</p>
+        </td></table>
  </body>
