--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -32,4 +32,14 @@
     <p>{{text}}</p>
     <p>Ответ: {{answer}}</p>
         </td></table>
+
+
+    <form action="home" method="post">
+        {% csrf_token %}
+        {{ number }}
+        <input type="submit" value="Submit" />
+        </form>
+    {{stroka}}
+
+
  </body>
