--- a/mysite/polls/templates/mysite/lms.html
+++ b/mysite/polls/templates/mysite/lms.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>LMS</title>
+<html>
+ <head>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>LMS</title>
+ </head>
+ <body>
     <p>Это ЛМС</p>
-    <p><a href="http://localhost:8000/login/" align="center"><button><h3>Понял.</button></a></p>
-</head>
-<body>
-
-</body>
+    <p><a href="http://localhost:8000/login/" align="center"><button><h4>Понял.</button></a></p>
+ </body>
 </html>
