--- a/mysite/polls/templates/mysite/dom.css
+++ b/mysite/polls/templates/mysite/dom.css
@@ -1,36 +1,4 @@
 
-body { 
-    background-image: url(images/EdFon.jpg);
-	background-attachment: fixed;
-}
-#big {
-	position: relative;
-	width: 1300px;
-	height: 800px;
-	margin: auto;
-}
-#main {
-	position: relative;
-    width: 700px;
-	height: 370px;
-    margin: auto;
-	-webkit-border-radius: 10px;
-    -ms-border-radius: 10px;
-    border-radius: 10px;
-    background-image: url(images/dobriiprivet.png);
-}
-#zagolovok{
-	position: absolute;
-    width: 600px;
-	height: 370px;
-	margin: auto;
-	margin-top: 25px;
-    margin-left: 25px;
-	-webkit-border-radius: 10px;
-    -ms-border-radius: 10px;
-    border-radius: 10px;
-    background-image: url(images/fonbloka.png);
-}
 #text_sleva{
 	font:Arial;
 	font-size:22;
@@ -42,23 +10,24 @@ body {
 }
 h2{
 	font:Arial;
-	font-size:32;
-	color:white;
+	font-size:52;
+	color:red;
 	margin-bottom: 0px;
-	margin-top: -5px;
+	margin-top: 0px;
 }
 h1 {
 	font:Arial;
-	font-size:22;
-	color:white;
+	font-size:42;
+	color:red;
 }
 h3{
-	font-size: 140%;
-	margin-top: 7px;
-	margin-bottom: 7px;
+	font-size: 40%;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	color: red;
 }
 h4{
-	font-size: 140%;
+	font-size: 240%;
 	color: white;
 	margin-top: 7px;
 	margin-bottom: 7px;
