--- a/mysite/polls/templates/mysite/dom.html
+++ b/mysite/polls/templates/mysite/dom.html
@@ -23,7 +23,7 @@
 
     <!--<p>user.id : {{user.id}}</p>-->
 
-
+    <a href="http://localhost:8000/polls/primer"><button type="button" class="btn btn-primary">polls/primer</button></a>
 
     <table border="2" align="center"> <td>
     <p>Задача: {{name}}</p>
