--- a/mysite/polls/templates/mysite/lms.html
+++ b/mysite/polls/templates/mysite/lms.html
@@ -8,6 +8,6 @@
  </head>
  <body>
     <p>Это ЛМС</p>
-    <p><a href="http://localhost:8000/login/" align="center"><button><h4>Понял.</button></a></p>
+    <p><a href="http://localhost:8000/home/" align="center"><button><h4>Понял.</button></a></p>
  </body>
 </html>
