--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -8,6 +8,7 @@
     {{answerCheck}} (<== вот сюда прилепить картинку галочка/крестик)
 
 </form>
+<a href="http://localhost:8000/home"><button type="button" class="btn btn-primary">Главная</button></a>
 
 
 
