--- a/mysite/polls/templates/mysite/base.html
+++ b/mysite/polls/templates/mysite/base.html
@@ -19,17 +19,20 @@
                     <div id="text-navbar"><p class="text-center">Вы вошли как {{ user.username }}.</p></div>
                     <ul class="nav nav-pills nav-stacked">
                         <li {% block home %}{% endblock %} type="submit">
-                            <a href=' http://127.0.0.1:8000/home'>Главная страница</a>
+                            <a href='/home'>Главная страница</a>
                         <li {% block temp_make %}{% endblock %} type="submit">
-                            <a href="http://127.0.0.1:8000/temp_make"> Cоздать варианты заданий</a></li>
+                            <a href="/temp_make"> Cоздать варианты заданий</a></li>
                         <li {% block temp_save %}{% endblock %} type="submit">
                             {% if teacher_check %}
-                            <a href="http://localhost:8000/temp_save"><font color="white">Создать свой шаблон</font></a>
+                            <a href="/temp_save"><font color="white">Создать свой шаблон</font></a>
                             {% endif %}</li>
                         <li {% block train %}{% endblock %} type="submit">
-                            <a href="http://localhost:8000/polls/primer">Тренажёр</a></li>
+                            <a href="/polls/primer">Тренажёр</a></li>
+                        <li {% block practice %}{% endblock %} type="submit">
+                            <a href='/practice'>Практика</a>
                         <li type="button">
-                            <a href="http://localhost:8000/logout/"><i class="icon-search icon-off"> </i> Выход</a></li>
+                            <a href="/logout/"><i class="icon-search icon-off"> </i> Выход</a></li>
+
                     </ul>
 
                 </div>
