minor bug fixes

--- a/mysite/polls/templates/mysite/lms.html
+++ b/mysite/polls/templates/mysite/lms.html
@@ -4,6 +4,6 @@
 {% block name %}ЛМС{% endblock %}
 {% block content %}
     <p>Это ЛМС</p>
-    <p><a href="http://localhost:8000/home/" align="center"><button><h4>Понял.</button></a></p>
+    <p><a href="/home/" align="center"><button><h4>Понял.</button></a></p>
 
 {% endblock %}
