--- a/mysite/polls/templates/mysite/login.html
+++ b/mysite/polls/templates/mysite/login.html
@@ -11,6 +11,6 @@ class="active"
 
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Войти</button>
-            <a href="http://localhost:8000/register/"><button type="button" class="btn btn-primary">Регистрация</button></a>
+            <a href="/register/"><button type="button" class="btn btn-primary">Регистрация</button></a>
             </form>
 {% endblock %}
