добавлена генерация PDF на temp_make

--- a/mysite/polls/templates/mysite/base.html
+++ b/mysite/polls/templates/mysite/base.html
@@ -29,7 +29,9 @@
                         <li {% block train %}{% endblock %} type="submit">
                             <a href="/polls/primer">Тренажёр</a></li>
                         <li {% block practice %}{% endblock %} type="submit">
+                            {% if user.is_authenticated %}
                             <a href='/practice'>Практика</a>
+                            {% endif %}
                         <li type="button">
                             <a href="/logout/"><i class="icon-search icon-off"> </i> Выход</a></li>
 
