--- a/mysite/polls/templates/mysite/base.html
+++ b/mysite/polls/templates/mysite/base.html
@@ -1,10 +1,11 @@
 {% load staticfiles %}
+{% load static %}
 <html>
     <head>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" href="{% static 'home.css' %}">
+        <link rel="stylesheet" href='{% static "home.css"%}'/>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
@@ -12,7 +13,7 @@
             <div class="raw">
                 <div class="col-lg-2">
                     <div id="lms-logo">
-                        <p><img src="http://cdn1.savepice.ru/uploads/2017/5/20/7c9fb0f191a16b286453dd7db53126ba-full.png" class="img-responsive" alt="тут должно быть лого"></p>
+                        <p><img src='{% static "logo.png"%}' class="img-responsive" alt="тут должно быть лого"></p>
                     </div>
 
                     <br>
