--- a/mysite/polls/templates/mysite/login.html
+++ b/mysite/polls/templates/mysite/login.html
@@ -1,16 +1,19 @@
 {% extends "mysite/base.html" %}
+{% block import %}
+{% load static %}
+    <link type="text/css" rel="stylesheet" href="{% static 'polls/css/login.css' %}">
+{% endblock %}
 {% block enter %}
 class="active"
 {% endblock %}
 {% block title %}Логин{% endblock %}
 {% block name %}Вход в систему{% endblock %}
 {% block content %}
-        <br>
-            <form action="" method="post">
-            {% csrf_token %}
 
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Войти</button>
-            <a href="/register/"><button type="button" class="btn btn-primary">Регистрация</button></a>
-            </form>
+<form action="" method="post" class="login__block">
+{% csrf_token %}
+{{ form.as_p }}
+<button type="submit" class="btn btn-primary">Войти</button>
+<a href="/register/"><button type="button" class="btn btn-primary">Регистрация</button></a>
+</form>
 {% endblock %}
