--- a/mysite/polls/templates/mysite/base.html
+++ b/mysite/polls/templates/mysite/base.html
@@ -26,7 +26,7 @@
             {% endif %}
             <ul class="nav nav-pills nav-stacked">
                 <li {% block home %}{% endblock %} type="submit">
-                    <a class="navbar-link" href='{% url 'polls:index' %}'>Главная страница</a>
+                    <a class="navbar-link" href='{% url 'polls:home' %}'>Главная страница</a>
                 <li {% block temp_make %}{% endblock %} type="submit">
                     <a href="/temp_make"> Cоздать варианты заданий</a></li>
                 <li {% block temp_save %}{% endblock %} type="submit">
