nos ral + added brief info on homepage

--- a/mysite/polls/templates/mysite/home.html
+++ b/mysite/polls/templates/mysite/home.html
@@ -8,7 +8,18 @@ class="active"
 
     <p><font >
 
-	<p class="text-center">Здесь будет текст стартовой страницы, но пока его нет</p>
+	<p class="text-left" style="padding-left: 40px;">Краткая информация о страничках:</p>
+    <br>
+	<p class="text-left" style="padding-left: 40px;">Создать варианты заданий (только для Учителя): генерирует PDF файл с заданным количеством задач, вариантов по выбранной теме.</p>
+    <br>
+	<p class="text-left" style="padding-left: 40px;">Создать свой шаблон (только для Учителя): позволяет создать собственный шаблон для задачи, с возможностью подставления числовых и строчных значений из базы данных для уникального контекста.</p>
+    <br>
+	<p class="text-left" style="padding-left: 40px;">Тренажер: сложение, вычитание, умножение и деление с проверкой введенного ответа.</p>
+    <br>
+    <p class="text-left" style="padding-left: 40px;">Практика: решение задач по шаблонам из базы с проверкой введенного ответа. Дробные значения пишутся через точку.</p>
+    <br>
+    <p class="text-left" style="padding-left: 40px;">Ранняя версия, баги неизбежны. При столкновении обновить страницу (F5)</p>
+    <br>
     <br>
     <p class="text-center">Пример созданного задания:</p>
 
